k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /api         
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 4001
      - path: /         
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
